Collect-TV-20180201/src/objects/TNET_Tab__c.object
<CustomObject>
    <fields>
        <fullName>Is_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Navigation_Display_Name__c</fullName>
        <description>The name that will display on the navigation tab</description>
        <label>Navigation Display Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentTab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentTab</label>
        <referenceTo>TNET_Tab__c</referenceTo>
        <relationshipLabel>TNET Tabs</relationshipLabel>
        <relationshipName>TNET_Tabs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TNET_Tab_Type__c</fullName>
        <label>Tab Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <externalId>true</externalId>
        <label>external id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TNET Tab</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Hidden__c</columns>
        <columns>Order__c</columns>
        <columns>TNET_Tab_Type__c</columns>
        <columns>ParentTab__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Tabs_Consumers</fullName>
        <columns>NAME</columns>
        <columns>ParentTab__c</columns>
        <columns>TNET_Tab_Type__c</columns>
        <columns>Order__c</columns>
        <columns>Is_Hidden__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TNET_Tab_Type__c</field>
            <operation>equals</operation>
            <value>Consumer</value>
        </filters>
        <label>Tabs-Consumers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>TNET Tabs Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>